--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "import os\n"
+    "import os\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3345,7 +3346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3359,7 +3360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3452,7 +3453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3476,7 +3477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3904,7 +3905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3925,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4025,22 +4026,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './results/awcm/in_context_random.jsonl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[42], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m tokens[app][method] \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     13\u001b[0m file_path \u001b[38;5;241m=\u001b[39m results_dir \u001b[38;5;241m+\u001b[39m app \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m method \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.jsonl\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m     15\u001b[0m     lines \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n",
-      "File \u001b[1;32mc:\\Users\\sigur\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:308\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    301\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    302\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    303\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    304\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    305\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    306\u001b[0m     )\n\u001b[1;32m--> 308\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './results/awcm/in_context_random.jsonl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_dir = './results/'\n",
     "# get all files in a directory\n",
@@ -4135,7 +4123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4165,6 +4153,256 @@
     "print(\"Total Token usage based on method\")\n",
     "print(total_tokens_application)\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total lines of code in each application\n",
+      "{\n",
+      "    \"scarf-beta\": 1685,\n",
+      "    \"awcm\": 14727,\n",
+      "    \"events_lister\": 3217,\n",
+      "    \"bwapp\": 57111,\n",
+      "    \"dvwa\": 8313,\n",
+      "    \"jsforum\": 2930,\n",
+      "    \"mybb\": 136650,\n",
+      "    \"mybloggie\": 9485,\n",
+      "    \"phpns\": 6539,\n",
+      "    \"phpoll\": 4548,\n",
+      "    \"online_store\": 3080,\n",
+      "    \"wackopicko\": 3042\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count total lines of code in each application\n",
+    "\n",
+    "def get_all_files(directory):\n",
+    "    return [os.path.join(dp, f) for dp, dn, filenames in os.walk(directory) for f in filenames]\n",
+    "\n",
+    "def get_all_files_of_type(directory, file_type):\n",
+    "    return [os.path.join(dp, f) for dp, dn, filenames in os.walk(directory) for f in filenames if f.endswith(file_type)]\n",
+    "\n",
+    "scarf_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\scarf-beta\"\n",
+    "awcm_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\AWCM v2.2 final\\awcm\"\n",
+    "events_lister_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\Basic-php-events-lister2.03\\events2\"\n",
+    "bwapp_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\bWAPPv2.2\\bWAPP\"\n",
+    "dvwa_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\DVWA-master\\DVWA-master\"\n",
+    "jsforum_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\JsForum0.01beta\"\n",
+    "mybb_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\mybb_1607\\Upload\"\n",
+    "mybloggie_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\mybloggie214\"\n",
+    "phpns_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\phpns211\"\n",
+    "phpoll_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\phpoll-097beta\"\n",
+    "online_store_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\Shopping-web-Jsp-Servlet-master\\Shopping-web-Jsp-Servlet-master\"\n",
+    "wackopicko_path = r\"C:\\Users\\sigur\\Downloads\\master-applications\\WackoPicko-master\"\n",
+    "paths = [scarf_path, awcm_path, events_lister_path, bwapp_path, dvwa_path, jsforum_path, mybb_path, mybloggie_path, phpns_path, phpoll_path, online_store_path, wackopicko_path]\n",
+    "path_order = [\"scarf-beta\", \"awcm\", \"events_lister\", \"bwapp\", \"dvwa\", \"jsforum\", \"mybb\", \"mybloggie\", \"phpns\", \"phpoll\", \"online_store\", \"wackopicko\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "total_lines_of_code = {}\n",
+    "for i in range(len(paths)):\n",
+    "    \n",
+    "    app = path_order[i]\n",
+    "    total_lines_of_code[app] = 0\n",
+    "    path = paths[i]\n",
+    "    \n",
+    "    all_files = get_all_files_of_type(path, \".php\")\n",
+    "    all_files += get_all_files_of_type(path, \".jsp\")\n",
+    "    all_files += get_all_files_of_type(path, \".java\")\n",
+    "    for file in all_files:\n",
+    "        with open(file, 'r', encoding='utf-8',errors='replace') as f:\n",
+    "            try:\n",
+    "                lines = f.readlines()\n",
+    "                total_lines_of_code[app] += len(lines)\n",
+    "            except:\n",
+    "                print(\"Error in file: \", file)\n",
+    "                print(app)\n",
+    "\n",
+    "print(\"Total lines of code in each application\")\n",
+    "print(json.dumps(total_lines_of_code, indent=4))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calcualte the total response time for each application\n",
+    "\n",
+    "# There was an issue in the first run,\n",
+    "# The log.jsonl file shows that the mybloggie run was aborted the first time. \n",
+    "# Line 4278 to 4442 must be ignored \n",
+    "\n",
+    "timestamps = {}\n",
+    "current_app = \"\"\n",
+    "log_file = \"./logger/log.jsonl\"\n",
+    "with open(log_file, 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "    i = 0\n",
+    "    for line in lines:\n",
+    "        i += 1\n",
+    "        if i >= 4278 and i <= 4442:\n",
+    "            continue\n",
+    "        data = json.loads(line)\n",
+    "        timestamp_str = data.get(\"timestamp\")\n",
+    "        timestamp = datetime.strptime(timestamp_str, \"%Y-%m-%d %H:%M:%S.%f\")\n",
+    "        message = data.get(\"message\")\n",
+    "        if message.startswith(\"Starting task for\"):\n",
+    "            current_app = message.split(\" \")[-1]\n",
+    "            timestamps[current_app] = {}\n",
+    "            for method in [\"basic\", \"in_context_random\", \"in_context_pair\", \"simple_cot\"]:\n",
+    "                timestamps[current_app][method] = []\n",
+    "        elif message.startswith(\"prompts/\"):\n",
+    "            method = message.split(\"/\")[-1]\n",
+    "            method = method.split(\".\")[0]\n",
+    "            timestamps[current_app][method].append(timestamp)\n",
+    "            continue\n",
+    "    \n",
+    "response_times = {}\n",
+    "for app in order_of_apps:\n",
+    "    response_times[app] = {}\n",
+    "    for method in [\"basic\", \"in_context_random\", \"in_context_pair\", \"simple_cot\"]:\n",
+    "        response_times[app][method] = (timestamps[app][method][-1] - timestamps[app][method][0]).total_seconds()\n",
+    "\n",
+    "total_response_times = {}\n",
+    "for app in order_of_apps:\n",
+    "    total_response_times[app] = sum(response_times[app].values())\n",
+    "\n",
+    "total_response_times_method = {}\n",
+    "for method in [\"basic\", \"in_context_random\", \"in_context_pair\", \"simple_cot\"]:\n",
+    "    total_response_times_method[method] = sum([response_times[app][method] for app in order_of_apps])\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response times for each application\n",
+      "{\n",
+      "    \"scarf-beta\": {\n",
+      "        \"basic\": 150.275441,\n",
+      "        \"in_context_random\": 115.523136,\n",
+      "        \"in_context_pair\": 132.890735,\n",
+      "        \"simple_cot\": 341.710863\n",
+      "    },\n",
+      "    \"awcm\": {\n",
+      "        \"basic\": 1567.631138,\n",
+      "        \"in_context_random\": 2189.620544,\n",
+      "        \"in_context_pair\": 2296.966347,\n",
+      "        \"simple_cot\": 6339.751316\n",
+      "    },\n",
+      "    \"events_lister\": {\n",
+      "        \"basic\": 263.906857,\n",
+      "        \"in_context_random\": 254.757026,\n",
+      "        \"in_context_pair\": 228.69902,\n",
+      "        \"simple_cot\": 572.081405\n",
+      "    },\n",
+      "    \"bwapp\": {\n",
+      "        \"basic\": 1291.799325,\n",
+      "        \"in_context_random\": 1482.660449,\n",
+      "        \"in_context_pair\": 1532.020459,\n",
+      "        \"simple_cot\": 3886.150767\n",
+      "    },\n",
+      "    \"dvwa\": {\n",
+      "        \"basic\": 627.821671,\n",
+      "        \"in_context_random\": 809.879373,\n",
+      "        \"in_context_pair\": 868.715556,\n",
+      "        \"simple_cot\": 2617.081796\n",
+      "    },\n",
+      "    \"jsforum\": {\n",
+      "        \"basic\": 252.201385,\n",
+      "        \"in_context_random\": 290.119064,\n",
+      "        \"in_context_pair\": 381.256987,\n",
+      "        \"simple_cot\": 837.464645\n",
+      "    },\n",
+      "    \"mybb\": {\n",
+      "        \"basic\": 2032.405345,\n",
+      "        \"in_context_random\": 2441.733802,\n",
+      "        \"in_context_pair\": 2532.574642,\n",
+      "        \"simple_cot\": 6266.926499\n",
+      "    },\n",
+      "    \"mybloggie\": {\n",
+      "        \"basic\": 328.029131,\n",
+      "        \"in_context_random\": 377.068425,\n",
+      "        \"in_context_pair\": 384.584663,\n",
+      "        \"simple_cot\": 926.382405\n",
+      "    },\n",
+      "    \"phpns\": {\n",
+      "        \"basic\": 180.036207,\n",
+      "        \"in_context_random\": 188.225823,\n",
+      "        \"in_context_pair\": 226.261804,\n",
+      "        \"simple_cot\": 487.490538\n",
+      "    },\n",
+      "    \"phpoll\": {\n",
+      "        \"basic\": 128.101528,\n",
+      "        \"in_context_random\": 178.215782,\n",
+      "        \"in_context_pair\": 175.983011,\n",
+      "        \"simple_cot\": 514.701142\n",
+      "    },\n",
+      "    \"online_store\": {\n",
+      "        \"basic\": 171.096762,\n",
+      "        \"in_context_random\": 204.393273,\n",
+      "        \"in_context_pair\": 224.242019,\n",
+      "        \"simple_cot\": 632.724319\n",
+      "    },\n",
+      "    \"wackopicko\": {\n",
+      "        \"basic\": 242.917003,\n",
+      "        \"in_context_random\": 325.051641,\n",
+      "        \"in_context_pair\": 372.956049,\n",
+      "        \"simple_cot\": 922.796418\n",
+      "    }\n",
+      "}\n",
+      "Total response times for each application\n",
+      "{\n",
+      "    \"scarf-beta\": 740.400175,\n",
+      "    \"awcm\": 12393.969345,\n",
+      "    \"events_lister\": 1319.444308,\n",
+      "    \"bwapp\": 8192.631000000001,\n",
+      "    \"dvwa\": 4923.498396,\n",
+      "    \"jsforum\": 1761.042081,\n",
+      "    \"mybb\": 13273.640287999999,\n",
+      "    \"mybloggie\": 2016.0646239999996,\n",
+      "    \"phpns\": 1082.014372,\n",
+      "    \"phpoll\": 997.0014630000001,\n",
+      "    \"online_store\": 1232.456373,\n",
+      "    \"wackopicko\": 1863.721111\n",
+      "}\n",
+      "Total response times for each method\n",
+      "{\n",
+      "    \"basic\": 7236.221793000001,\n",
+      "    \"in_context_random\": 8857.248338,\n",
+      "    \"in_context_pair\": 9357.151291999999,\n",
+      "    \"simple_cot\": 24345.262113000004\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Response times for each application\")\n",
+    "print(json.dumps(response_times, indent=4))\n",
+    "\n",
+    "print(\"Total response times for each application\")\n",
+    "print(json.dumps(total_response_times, indent=4))\n",
+    "\n",
+    "print(\"Total response times for each method\")\n",
+    "print(json.dumps(total_response_times_method, indent=4))"
    ]
   },
   {
